--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1468,6 +1468,34 @@ body.scroll-off {
 .order-form-area .page-title-area .btn-close .ico-close {
   width: 18px;
 }
+.order-form-area .btn-order-area {
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 720px;
+}
+.order-form-area .btn-order-area .btn-order {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #01d760;
+  margin: 20px 18px 0;
+  width: calc(100% - 18px * 2);
+  height: 50px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+}
+.order-form-area .btn-order-area .btn-order .ico-n-logo {
+  margin-right: 6px;
+  width: 18px;
+  height: 18px;
+}
+.order-form-area .go-to-top {
+  background: none;
+  padding: 26px 0;
+}
 
 .order-content {
   margin: -40px 10px 0;
@@ -1742,6 +1770,121 @@ body.scroll-off {
   display: block;
   width: 100%;
   border-top: 1px solid #e9eef0;
+}
+.order-content-extra .agreement-area .agreement-list {
+  margin-top: 10px;
+  border: 1px solid #d5dadd;
+  border-radius: 5px;
+  overflow: hidden;
+}
+.order-content-extra .agreement-area .agreement-list .agreement-item:not(:first-child) {
+  border-top: 1px solid #ecf0f2;
+}
+.order-content-extra .agreement-area .agreement-list .agreement-item.is-open .agreement-content {
+  display: block;
+}
+.order-content-extra .agreement-area .agreement-list .agreement-item.is-open .btn-toggle {
+  transform: rotate(0deg);
+}
+.order-content-extra .agreement-area .agreement-list .agreement-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 12px;
+  height: 44px;
+  color: #242424;
+}
+.order-content-extra .agreement-area .agreement-list .agreement-title .txt {
+  font-size: 15px;
+}
+.order-content-extra .agreement-area .agreement-list .agreement-title .btn-toggle {
+  width: 44px;
+  height: 100%;
+  transform: rotate(180deg);
+}
+.order-content-extra .agreement-area .agreement-list .agreement-content {
+  display: none;
+  padding: 12px;
+  max-height: 194px;
+  overflow-y: auto;
+  border-top: 1px solid #ecf0f2;
+  color: #666;
+  font-size: 14px;
+  background-color: #f8fafb;
+}
+.order-content-extra .agreement-area .agreement-info-txt {
+  margin-top: 14px;
+  padding-left: 8px;
+  border-left: 3px solid #f8fafb;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.8;
+  letter-spacing: -0.45px;
+  color: #666;
+}
+
+.modal-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 10000;
+}
+.modal-wrapper .modal-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  max-width: 324px;
+  width: calc(100% - 32px);
+  transform: translate(-50%, -50%);
+  border-radius: 12px;
+  text-align: center;
+  overflow: hidden;
+  background-color: #fff;
+  z-index: 10001;
+}
+.modal-wrapper .modal-content {
+  padding: 24px 30px;
+  color: #333;
+  position: relative;
+}
+.modal-wrapper .modal-content .btn-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  padding: 16px;
+}
+.modal-wrapper .modal-content .modal-icon {
+  opacity: 0.7;
+}
+.modal-wrapper .modal-content .modal-title {
+  margin-top: 8px;
+  font-size: 20px;
+  font-weight: 700;
+}
+.modal-wrapper .modal-content .modal-desc {
+  margin-top: 8px;
+  color: #000;
+  letter-spacing: -0.3px;
+}
+.modal-wrapper .btn-area {
+  display: flex;
+}
+.modal-wrapper .btn-area button {
+  flex: 1;
+  padding: 16px 0;
+  font-size: 18px;
+}
+.modal-wrapper .btn-area .btn-cancle {
+  background-color: #edf1f4;
+  color: #333;
+}
+.modal-wrapper .btn-area .btn-confirm {
+  background-image: linear-gradient(to left, #3accff, #2cec88);
+  font-weight: 800;
+  color: #fff;
 }
 
 .container {
