--- a/assets/scss/components/order/_order_form_area.scss
+++ b/assets/scss/components/order/_order_form_area.scss
@@ -31,6 +31,35 @@
         width: 18px;
       }
     }
+  }
 
+  .btn-order-area{
+    margin-top: 20px;
+    @include common-inner ;
+
+    .btn-order{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $green;
+      margin: 20px $m-padding 0;
+      width: calc(100% - #{$m-padding} * 2);
+      height: 50px;
+      border-radius: 5px;
+      font-size: 16px;
+      font-weight: 700;
+      color: #fff;
+
+      .ico-n-logo{
+        margin-right: 6px;
+        width: 18px;
+        height: 18px;
+      }
+    }
+  }
+
+  .go-to-top{
+    background: none;
+    padding: 26px 0;
   }
 }
